polarization vector P for boundary conditions in spin diff problem normalized

--- a/default-settings.yml
+++ b/default-settings.yml
@@ -167,7 +167,7 @@ mesh:
       # electrostatic problem.
       V:
 
-      # polarization vector for spin diffusion problem boundary condition.
+      # polarization unit vector for spin diffusion problem boundary condition.
       P: [0, 0, 1]
 
       # spin diffusion vector for spin diffusion problem boundary condition.
