default-settings, examples: prefer Ms over Js
Let Ms, rather than Js, be the preferred way of specifying the
saturation magnetization. Ms should thus appear in:

  * default-settings.yml (the output of ‘feellgood --print-defaults’)

  * the output of ‘feellgood --verify’

  * the provided examples

While we are at it, fix an error in the examples 3 and 4. The lines:

    mySettings[...]["Js"] = 800e3

were intended to mean:

    mySettings[...]["Ms"] = 800e3

BREAKING CHANGE: In the python module settingsMaker.py, the method
Settings.setMaterialRegion() used to take Js as a parameter. This method
is now removed.

--- a/default-settings.yml
+++ b/default-settings.yml
@@ -102,8 +102,8 @@ mesh:
       # Exchange constant.
       Ae: 1e-11
 
-      # Saturation magnetization times µ₀, in tesla.
-      Js: 1
+      # Saturation magnetization. Default is 1 T/μ₀.
+      Ms: 795774.7
 
       # Second order magnetocrystalline anisotropy constant.
       K: 0
