spin accumulation: variable J renamed to avoid ambiguity: it is a scalar: J -> jn = j \cdot \hat{n}

--- a/default-settings.yml
+++ b/default-settings.yml
@@ -159,9 +159,9 @@ mesh:
       # Unit vector along the surface anisotropy axis.
       uk: [0, 0, 1]
 
-      # Fixed current density value (J.n) for the boundary conditions of
+      # Fixed normal current density value (j.n) for the boundary conditions of
       # the electrostatic and the spin diffusion problems.
-      J:
+      jn:
 
       # Fixed potential value for the boundary conditions of the
       # electrostatic problem.
