Handle ONE_GAUSS_POINT like ENABLE_SEQ
These two configuration options are handled differently:

  * ENABLE_SEQ is defined as either 0 or 1, via a #cmakedefine01
    directive in config.h.in

  * ONE_GAUSS_POINT is either defined as 1 or undefined, via the option
    -DONE_GAUSS_POINT conditionally given to the compiler

As this is a source of confusion, let's handle them identically.
Defining both as either 0 or 1 enables a few code simplifications.

--- a/config.h.in
+++ b/config.h.in
@@ -36,6 +36,9 @@ const double CHARGE_ELECTRON = 1.602176634e-19;     /**< C */
 const double MASS_ELECTRON = 9.1093837139e-31;      /**< kg */
 const double BOHRS_MUB = CHARGE_ELECTRON * PLANCKS_HBAR / (2. * MASS_ELECTRON); /**< C.m^2 */
 
+/** use of a single Gauss point */
+#cmakedefine01 ONE_GAUSS_POINT
+
 /** set execution policy */
 #cmakedefine01 ENABLE_SEQ
 
